# klapp-rfq-sync-service

./: DAY-DEPLOY-LITELLM-STEP-B.md  DAY-NEXT-TEST-MODEL-CONFIG.md  DAY-RESUME-2026-02-22.md  DAY-RESUME-2026-02-23.md  DAY-RESUME-2026-02-24.md  DAY-RESUME-2026-02-25.md  DAY-RESUME-2026-02-26.md
docs/: AI-LLM-CONFIGURATION-GUIDE.md
klapp-rfq-sync-service/: .env  .env.example  Dockerfile  pyproject.toml  requirements.txt
klapp-rfq-sync-service/src/: __init__.py  config.py  main.py
klapp-rfq-sync-service/src/consumers/: sync_consumer.py
klapp-rfq-sync-service/src/models/: __init__.py  events.py
klapp-rfq-sync-service/src/producers/: __init__.py
klapp-rfq-sync-service/src/services/: medusa_db.py  redis_client.py  sync_processor.py  transformer.py
scripts/: setup-dev-env.sh
